--- a/assets/package.json
+++ b/assets/package.json
@@ -1,18 +1,29 @@
 {
   "repository": {},
-  "license": "MIT",
-  "scripts": {
-    "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
-  },
   "dependencies": {
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix": "~1.4",
+    "phoenix_html": "~2.12"
   },
   "devDependencies": {
-    "babel-brunch": "6.1.1",
-    "brunch": "2.10.9",
-    "clean-css-brunch": "2.10.0",
-    "uglify-js-brunch": "2.10.0"
+    "autoprefixer": "~8.5",
+    "babel-core": "~6.26",
+    "babel-loader": "~7.1",
+    "babel-preset-es2015": "~6.24",
+    "copy-webpack-plugin": "~4.6",
+    "css-loader": "~0.28",
+    "extract-text-webpack-plugin": "~3.0",
+    "file-loader": "~1.1",
+    "imports-loader": "~0.8",
+    "node-sass": "~4.9",
+    "postcss-loader": "~2.1",
+    "precss": "~1.3",
+    "sass-loader": "~7.0",
+    "style-loader": "~0.21",
+    "webpack": "~3.10",
+    "webpack-merge": "~4.1"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production /node_modules/webpack/bin/webpack.js -p",
+    "watch": "NODE_ENV=development /node_modules/webpack/bin/webpack.js --config /app/assets/webpack.config.js --progress --color --watch"
   }
 }
